Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3473,8 +3473,8 @@ input, select, textarea {
 #navbar {
     position: sticky;
     top: 0;
-    width: calc(100% - 30%); /* Adjust the width to match the header */
-    margin-left: 30%; /* Align with the header */
+    width: calc(100% - 35%); /* Adjust the width to match the header */
+    margin-left: 35%; /* Align with the header */
     background-color: #333;
     z-index: 999; /* Ensure it stays on top of other elements */
 }
